--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
     <form id="registration-form">
         <label for="username">Username:</label>
-        <input type="text" id="username" required>
+        <input type="text" id="username" name="username" required>
         
 
         <label for="email">Email:</label>
-        <input type="email" id="email" required>
+        <input type="email" id="email" name="email" >
         
 
         <label for="password">Password:</label>
